--- a/preparing_TFD.ipynb
+++ b/preparing_TFD.ipynb
@@ -1091,7 +1091,7 @@
         "    # we build the QAOA circuit\n",
         "    qaoa = tfd.QAOA_TFD(3, d, angles)\n",
         "    # for the optimization we use minimize with the following args\n",
-        "    optimizer = lambda f, theta: minimize(f, theta, method='COBYLA', tol=1e-2, options={'maxiter': 1000})\n",
+        "    optimizer = lambda f, theta: minimize(f, theta, method='CG', tol=1e-5, options={'maxiter': 4000, 'gtol': 1e-5})\n",
         "    # we define the variational algorithm\n",
         "    cooker = tfd.StateCooker(qaoa, tfd_ref, 'aer_simulator', optimizer)\n",
         "    resultsAngles.append(cooker.optimize())"
@@ -1107,6 +1107,76 @@
         "id": "dCromcqFUUeT"
       },
       "id": "dCromcqFUUeT",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Comparing different tollerations\n"
+      ],
+      "metadata": {
+        "id": "R_NCxzSrYGNt"
+      },
+      "id": "R_NCxzSrYGNt"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "zXcGYFh0a85Q"
+      },
+      "outputs": [],
+      "source": [
+        "\"\"\"Save angles for each run, so we know which initial angles are problematic\n",
+        "(can do so for the second layer as well)\"\"\"\n",
+        "%%time\n",
+        "d = 2\n",
+        "beta = 1 \n",
+        "resultsAngles = []\n",
+        "ang = []\n",
+        "tols = []\n",
+        "tol = 1e-2\n",
+        "for i in range(10):\n",
+        "    # we initialize the angles randomnly at first\n",
+        "    angles = tfd.random_angles(4*d)\n",
+        "    ang.append(angles)\n",
+        "    tol = tol/10\n",
+        "    tols.append(tol)\n",
+        "    # the reference state is\n",
+        "    tfd_ref = tfd_generator().generate_tfd(beta)\n",
+        "    # we build the QAOA circuit\n",
+        "    qaoa = tfd.QAOA_TFD(3, d, angles)\n",
+        "    # for the optimization we use minimize with the following args\n",
+        "    optimizer = lambda f, theta: minimize(f, theta, method='COBYLA', tol=tol, options={'maxiter': 1000})\n",
+        "    # we define the variational algorithm\n",
+        "    cooker = tfd.StateCooker(qaoa, tfd_ref, 'aer_simulator', optimizer)\n",
+        "    resultsAngles.append(cooker.optimize())"
+      ],
+      "id": "zXcGYFh0a85Q"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(len(resultsAngles)):\n",
+        "  print(f'angles: {ang[i]}\\ntol: {tols[i]}\\n-->fidelity: {resultsAngles[i].fun}\\n\\n')"
+      ],
+      "metadata": {
+        "id": "Bv3InSsIa85Q"
+      },
+      "execution_count": null,
+      "outputs": [],
+      "id": "Bv3InSsIa85Q"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "E2Ae4dzPdCPQ"
+      },
+      "id": "E2Ae4dzPdCPQ",
       "execution_count": null,
       "outputs": []
     }
