--- a/tfd_qc.ipynb
+++ b/tfd_qc.ipynb
@@ -48,6 +48,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f8f4de2e-8b12-415e-ba19-428f27e38f5e",
+   "metadata": {},
+   "source": [
+    "## 0. Retrieving completed jobs\n",
+    "\n",
+    "As running on real quantum hardware often takes a lot of time, it would be nice to have a way to access old jobs. This can be done as [follows](https://quantumcomputing.stackexchange.com/questions/23637/how-can-i-retrieve-qiskit-runtime-jobs-that-i-have-submitted-to-ibm-quantum). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d96196e-4731-4124-90ad-c6737c3379df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit import IBMQ\n",
+    "IBMQ.load_account()\n",
+    "provider = IBMQ.get_provider(hub='HUB_NAME', group='GROUP_NAME', project='PROJECT_NAME')\n",
+    "job = provider.runtime.job('JOB_ID')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6d72f423-29c9-4454-9504-7914b9601a9d",
    "metadata": {},
    "source": [
